food-system.20211212.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
    name: foodsystem

#    spec:
#selector:
#    matchLabels:
#    app: foodapp
#replicas: 2 # tells deployment to run 2 pods matching the template
#emplate:
#
#    metadata:
#    labels:
#        app: foodapp
spec:
    replicas: 1
    selector:
        matchLabels:
            app: foodsystem
    template:
        metadata:
            labels:
                app: foodsystem
        spec:
            containers:
                - name: foodsystem
                  image: foodappregistry.azurecr.io/food-app:latest
                  imagePullPolicy: Always                  
                  ports:
                  - containerPort: 80
            imagePullSecrets:
                - name: regcred  
                
# apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
# kind: Deployment
# metadata:
    # name: food-system

# #    spec:
# #selector:
# #    matchLabels:
# #    app: foodapp
# #replicas: 2 # tells deployment to run 2 pods matching the template
# #emplate:
# #
# #    metadata:
# #    labels:
# #        app: foodapp
# spec:
    # replicas: 1
    # selector:
        # matchLabels:
            # app: food-system
    # template:
        # metadata:
            # labels:
                # app: food-system
        # spec:
            # containers:
                # - name: foodapp
                  # image: foodappregistry.azurecr.io/food-app
                  # imagePullPolicy: Always                  
                  # ports:
                  # - containerPort: 80
            # imagePullSecrets:
                # - name: regcred  

        
apiVersion: v1
kind: Service
metadata:
  name: foodsystem
spec:
  selector:
      app: foodsystem 
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
   
    
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodsystem
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: foodsystem
            port:
              number: 80
        pathType: Exact
